Config loading and JSON validation
* Load JSON config
* Added JSON schema
* Verify JSON schema
* Create Config from JSON file

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -48,6 +48,7 @@ RUN \
   python3-eyed3 \
   python3-feedparser \
   python3-invoke \
+  python3-jsonschema \
   python3-pygments \
   python3-requests \
   python3-setuptools \
