--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-invoke==2.0.0
-eyed3==0.9.7
+build==1.0.3
 feedparser==6.0.10
+invoke==2.0.0
+jsonschema==4.10.3
+mutagen==1.46.0
+pygments==2.17.2
 requests==2.31.0
+setuptools==68.1.2
